tests/neg-macros/annot-crash.check
-- Error: tests/neg-macros/annot-crash/Test_2.scala:1:0 ----------------------------------------------------------------
1 |@crash // error
  |^^^^^^
  |Failed to evaluate macro annotation '@crash'.
  |  Caused by class scala.NotImplementedError: an implementation is missing
  |    crash.$qmark$qmark$qmark(Macro_1.scala:9)
  |    crash.transform(Macro_1.scala:7)
